--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ NEXT_PUBLIC_POSTHOG_HOST="https://us.i.posthog.com"
 LANGFUSE_SECRET_KEY=""
 LANGFUSE_PUBLIC_KEY=""
 LANGFUSE_BASEURL="https://cloud.langfuse.com"
+
+# Logging (optional)
+LOG_LEVEL="info"
