--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@auth/drizzle-adapter": "^1.7.2",
     "@mendable/firecrawl-js": "^3.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tavily/core": "^0.5.12",
     "@vercel/functions": "^3.1.0",
     "@vercel/otel": "^1.13.0",
     "ai": "^5.0.15",
