feat(chat): add resumable streams and resume route
- add GET /api/chat/[id]/stream to resume active streams
- register UIMessageStream as resumable and tee SSE to avoid lock
- enable resume in client with prepareReconnectToStreamRequest
- add activeStreamId persistence and consolidate update method
- rename query to getResumableChat and refactor imports
- add resumable-stream and redis deps

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
+    "redis": "^5.8.2",
     "rehype-raw": "^7.0.0",
+    "resumable-stream": "^2.2.4",
     "robots-parser": "^3.0.1",
     "simple-icons": "^14.5.0",
     "use-stick-to-bottom": "^1.1.1",
